Fixed the dropdown menu on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -72,7 +72,7 @@
   cursor: pointer;
 }
 
-.dropdown:hover .dropdownContent {
+.dropdown.active .dropdownContent {
   display: block;
 }
 
